UpDate Kèo Mới 29-11-2024

--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
                                 style="color: rgb(180, 78, 71);">Extention </a>
 
                 </h3>
+                <h3>KAISAR (kèo mới): <a target="_blank" href="https://zero.kaisar.io/register?ref=fbRZnN747"
+                                style="color: rgb(180, 78, 71);">Tại đây </a>
+
+                </h3>
+                <h3>BLESS (kèo mới): <a target="_blank" href="https://bless.network/dashboard?ref=WAKGZ6"
+                                style="color: rgb(180, 78, 71);">Tại đây </a>
+
+                </h3>
+                <h3>PIPE GUARDIAN (kèo mới): <a target="_blank" href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
+                                style="color: rgb(180, 78, 71);">Tại đây </a>
+
+                </h3>
 
         </header>
 
