--- a/index.html
+++ b/index.html
@@ -6,67 +6,99 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Airdrop</title>
         <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body>
-        <header>
-                <p style="color: green; font-size: 40px;">Airdop Coin</p>
-                <div style="color: rgb(255, 0, 0);">TREO MÁY</div>
-                <div class="content">
-                        -------------------------------------------
+        <div class="container-fluid">
+                <div class="row">
+                        <div class="col-1"></div>
+                        <header class="col-10">
+                                <p style="color: green; font-size: 40px; margin-bottom: 0;">Airdop Coin</p>
+                                <div style="color: rgb(255, 0, 0);">TREO MÁY</div>
+                                <div class="content">
+                                        -------------------------
+                                </div>
+                                <h4>GRASS: <a target="_blank"
+                                                href="https://app.getgrass.io/register/?referralCode=KQqRz1rnDMxozW6"
+                                                style="color: rgb(180, 78, 71);">Tại đây</a> </h4>
+                                <h4>GADIENT: <a target="_blank" href="https://app.gradient.network/signup?code=6TJOPN"
+                                                style="color: rgb(180, 78, 71);">Tại
+                                                đây</a> <a target="_blank"
+                                                href="https://chromewebstore.google.com/detail/gradient-sentry-node/caacbgbklghmpodbdafajbgdnegacfmo"
+                                                style="color: rgb(180, 78, 71);"> Extention </a></h4>
+                                <h4>NODEPAY: <a target="_blank"
+                                                href="https://app.nodepay.ai/register?ref=jsOIOVnTSrHcldS"
+                                                style="color: rgb(180, 78, 71);">Tại
+                                                đây</a><a target="_blank"
+                                                href="https://chromewebstore.google.com/detail/nodepay-extension/lgmpfmgeabnnlemejacfljbmonaomfmm"
+                                                style="color: rgb(180, 78, 71);"> Extention </a></h4>
+                                <h4>OASIS AI: <a target="_blank" href="https://r.oasis.ai/f560c8ed67ef9de7"
+                                                style="color: rgb(180, 78, 71);">Tại
+                                                đây</a><a target="_blank"
+                                                href="https://chromewebstore.google.com/detail/oasisai/knhbjeinoabfecakfppapfgdhcpnekmm?hl=en"
+                                                style="color: rgb(180, 78, 71);"> Extention </a></h4>
+                                <h4>BOCKMESH: <a target="_blank"
+                                                href="https://app.blockmesh.xyz/register?invite_code=23c275a2-cf65-48f4-af93-b8f48a2c1384"
+                                                style="color: rgb(180, 78, 71);">Tại
+                                                đây</a><a target="_blank"
+                                                href="https://chromewebstore.google.com/detail/blockmesh-network/obfhoiefijlolgdmphcekifedagnkfjp"
+                                                style="color: rgb(180, 78, 71);"> Extention </a></h4>
+                                <h4>TENEO BETA: <a target="_blank" href="https://teneo.pro/community-node"
+                                                style="color: rgb(180, 78, 71);">Tại
+                                                đây</a><a target="_blank"
+                                                href="https://chromewebstore.google.com/detail/teneo-community-node/emcclcoaglgcpoognfiggmhnhgabppkm?hl=de&authuser=0"
+                                                style="color: rgb(180, 78, 71);"> Extention </a> <i>CODE: CH2GW</i>
+                                </h4>
+                                <h4>DAWN: <a target="_blank"
+                                                href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp"
+                                                style="color: rgb(180, 78, 71);">Extention </a> <i>CODE: 0dri9idh</i>
+
+                                </h4>
+                                <h4>UPLINK: <a target="_blank"
+                                                href="https://explorer.uplink.xyz/register?referralCode=zFDvW1"
+                                                style="color: rgb(180, 78, 71);">Extention </a>
+
+                                </h4>
+                                <h4>KAISAR (kèo mới): <a target="_blank"
+                                                href="https://zero.kaisar.io/register?ref=fbRZnN747"
+                                                style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
+                                                href="https://chromewebstore.google.com/detail/kaisar-zeronode/mmlnljdcfjnfeikeioghbkobdcmnhgko"
+                                                style="color: rgb(180, 78, 71);"> Extention </a>
+
+                                </h4>
+                                <h4>BLESS (kèo mới): <a target="_blank"
+                                                href="https://bless.network/dashboard?ref=WAKGZ6"
+                                                style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
+                                                href="https://chromewebstore.google.com/detail/bless/pljbjcehnhcnofmkdbjolghdcjnmekia"
+                                                style="color: rgb(180, 78, 71);"> Extention </a>
+
+                                </h4>
+                                <h4>PIPE GUARDIAN (kèo mới): <a target="_blank"
+                                                href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
+                                                style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
+                                                href="https://chromewebstore.google.com/detail/pipe-guardian-node/gelgmmdfajpefjbiaedgjkpekijhkgbe"
+                                                style="color: rgb(180, 78, 71);"> Extention </a>
+
+                                </h4>
+                                <div class="content">
+                                        -------------------------
+                                </div>
+                                <p>Ghi chú: </p>
+                                <h5>- Phần "Tại đây" là liên kết tạo tài khoản</h5>
+                                <h5>- Phần "Extention" là liên kết tải extention</h5>
+                                <h5>- Với những liên kết có phần CODE thì khi tạo tài khoản hãy nhập code vào phần mã
+                                        mời để nhận thêm point</h5>
+                        </header>
+                        <div class="col-1"></div>
                 </div>
-                <h3>GRASS: <a target="_blank" href="https://app.getgrass.io/register/?referralCode=KQqRz1rnDMxozW6"
-                                style="color: rgb(180, 78, 71);">Tại đây</a> </h3>
-                <h3>GADIENT: <a target="_blank" href="https://app.gradient.network/signup?code=6TJOPN"
-                                style="color: rgb(180, 78, 71);">Tại
-                                đây</a> <a target="_blank"
-                                href="https://chromewebstore.google.com/detail/gradient-sentry-node/caacbgbklghmpodbdafajbgdnegacfmo"
-                                style="color: rgb(180, 78, 71);"> Extention </a></h3>
-                <h3>NODEPAY: <a target="_blank" href="https://app.nodepay.ai/register?ref=jsOIOVnTSrHcldS"
-                                style="color: rgb(180, 78, 71);">Tại
-                                đây</a><a target="_blank"
-                                href="https://chromewebstore.google.com/detail/nodepay-extension/lgmpfmgeabnnlemejacfljbmonaomfmm"
-                                style="color: rgb(180, 78, 71);"> Extention </a></h3>
-                <h3>OASIS AI: <a target="_blank" href="https://r.oasis.ai/f560c8ed67ef9de7"
-                                style="color: rgb(180, 78, 71);">Tại
-                                đây</a><a target="_blank"
-                                href="https://chromewebstore.google.com/detail/oasisai/knhbjeinoabfecakfppapfgdhcpnekmm?hl=en"
-                                style="color: rgb(180, 78, 71);"> Extention </a></h3>
-                <h3>BOCKMESH: <a target="_blank"
-                                href="https://app.blockmesh.xyz/register?invite_code=23c275a2-cf65-48f4-af93-b8f48a2c1384"
-                                style="color: rgb(180, 78, 71);">Tại
-                                đây</a><a target="_blank"
-                                href="https://chromewebstore.google.com/detail/blockmesh-network/obfhoiefijlolgdmphcekifedagnkfjp"
-                                style="color: rgb(180, 78, 71);"> Extention </a></h3>
-                <h3>TENEO BETA: <a target="_blank" href="https://teneo.pro/community-node"
-                                style="color: rgb(180, 78, 71);">Tại
-                                đây</a><a target="_blank"
-                                href="https://chromewebstore.google.com/detail/teneo-community-node/emcclcoaglgcpoognfiggmhnhgabppkm?hl=de&authuser=0"
-                                style="color: rgb(180, 78, 71);"> Extention </a> <i>CODE: CH2GW</i>
-                </h3>
-                <h3>DAWN: <a target="_blank"
-                                href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp"
-                                style="color: rgb(180, 78, 71);">Extention </a> <i>CODE: 0dri9idh</i>
 
-                </h3>
-                <h3>UPLINK: <a target="_blank" href="https://explorer.uplink.xyz/register?referralCode=zFDvW1"
-                                style="color: rgb(180, 78, 71);">Extention </a>
+        </div>
 
-                </h3>
-                <h3>KAISAR (kèo mới): <a target="_blank" href="https://zero.kaisar.io/register?ref=fbRZnN747"
-                                style="color: rgb(180, 78, 71);">Tại đây </a>
-
-                </h3>
-                <h3>BLESS (kèo mới): <a target="_blank" href="https://bless.network/dashboard?ref=WAKGZ6"
-                                style="color: rgb(180, 78, 71);">Tại đây </a>
-
-                </h3>
-                <h3>PIPE GUARDIAN (kèo mới): <a target="_blank" href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
-                                style="color: rgb(180, 78, 71);">Tại đây </a>
-
-                </h3>
-
-        </header>
 
 </body>
 
