--- a/index.html
+++ b/index.html
@@ -23,65 +23,74 @@
                                 <div class="content">
                                         -----------------------
                                 </div>
-                                <h4><span class="rainbow-text">GRASS:</span> <a target="_blank"
+
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">GRASS:</span> <a
+                                                target="_blank"
                                                 href="https://app.getgrass.io/register/?referralCode=KQqRz1rnDMxozW6"
                                                 style="color: rgb(180, 78, 71);">Tại đây</a> </h4>
-                                <h4><span class="rainbow-text">GADIENT:</span> <a target="_blank"
-                                                href="https://app.gradient.network/signup?code=6TJOPN"
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">GADIENT:</span> <a
+                                                target="_blank" href="https://app.gradient.network/signup?code=6TJOPN"
                                                 style="color: rgb(180, 78, 71);">Tại
                                                 đây</a> <a target="_blank"
                                                 href="https://chromewebstore.google.com/detail/gradient-sentry-node/caacbgbklghmpodbdafajbgdnegacfmo"
                                                 style="color: rgb(180, 78, 71);"> Extention </a></h4>
-                                <h4><span class="rainbow-text">NODEPAY:</span> <a target="_blank"
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">NODEPAY:</span> <a
+                                                target="_blank"
                                                 href="https://app.nodepay.ai/register?ref=jsOIOVnTSrHcldS"
                                                 style="color: rgb(180, 78, 71);">Tại
                                                 đây</a><a target="_blank"
                                                 href="https://chromewebstore.google.com/detail/nodepay-extension/lgmpfmgeabnnlemejacfljbmonaomfmm"
                                                 style="color: rgb(180, 78, 71);"> Extention </a></h4>
-                                <h4><span class="rainbow-text">OASIS AI:</span> <a target="_blank"
-                                                href="https://r.oasis.ai/f560c8ed67ef9de7"
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">OASIS AI:</span> <a
+                                                target="_blank" href="https://r.oasis.ai/f560c8ed67ef9de7"
                                                 style="color: rgb(180, 78, 71);">Tại
                                                 đây</a><a target="_blank"
                                                 href="https://chromewebstore.google.com/detail/oasisai/knhbjeinoabfecakfppapfgdhcpnekmm?hl=en"
                                                 style="color: rgb(180, 78, 71);"> Extention </a></h4>
-                                <h4><span class="rainbow-text">BOCKMESH:</span> <a target="_blank"
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">BOCKMESH:</span> <a
+                                                target="_blank"
                                                 href="https://app.blockmesh.xyz/register?invite_code=23c275a2-cf65-48f4-af93-b8f48a2c1384"
                                                 style="color: rgb(180, 78, 71);">Tại
                                                 đây</a><a target="_blank"
                                                 href="https://chromewebstore.google.com/detail/blockmesh-network/obfhoiefijlolgdmphcekifedagnkfjp"
                                                 style="color: rgb(180, 78, 71);"> Extention </a></h4>
-                                <h4><span class="rainbow-text">TENEO BETA:</span> <a target="_blank"
-                                                href="https://teneo.pro/community-node"
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">TENEO BETA:</span> <a
+                                                target="_blank" href="https://teneo.pro/community-node"
                                                 style="color: rgb(180, 78, 71);">Tại
                                                 đây</a><a target="_blank"
                                                 href="https://chromewebstore.google.com/detail/teneo-community-node/emcclcoaglgcpoognfiggmhnhgabppkm?hl=de&authuser=0"
-                                                style="color: rgb(180, 78, 71);"> Extention </a> <i>CODE: CH2GW</i>
+                                                style="color: rgb(180, 78, 71);"> Extention </a> <i>CODE:
+                                                CH2GW</i>
                                 </h4>
-                                <h4><span class="rainbow-text">DAWN:</span> <a target="_blank"
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">DAWN:</span> <a
+                                                target="_blank"
                                                 href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp"
-                                                style="color: rgb(180, 78, 71);">Extention </a> <i>CODE: 0dri9idh</i>
+                                                style="color: rgb(180, 78, 71);">Extention </a> <i>CODE:
+                                                0dri9idh</i>
 
                                 </h4>
-                                <h4><span class="rainbow-text">UPLINK:</span> <a target="_blank"
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">UPLINK:</span> <a
+                                                target="_blank"
                                                 href="https://explorer.uplink.xyz/register?referralCode=zFDvW1"
                                                 style="color: rgb(180, 78, 71);">Extention </a>
 
                                 </h4>
-                                <h4><span class="rainbow-text">KAISAR (kèo mới):</span> <a target="_blank"
-                                                href="https://zero.kaisar.io/register?ref=fbRZnN747"
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">KAISAR (kèo mới):</span>
+                                        <a target="_blank" href="https://zero.kaisar.io/register?ref=fbRZnN747"
                                                 style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
                                                 href="https://chromewebstore.google.com/detail/kaisar-zeronode/mmlnljdcfjnfeikeioghbkobdcmnhgko"
                                                 style="color: rgb(180, 78, 71);"> Extention </a>
 
                                 </h4>
-                                <h4><span class="rainbow-text">BLESS (kèo mới):</span> <a target="_blank"
-                                                href="https://bless.network/dashboard?ref=WAKGZ6"
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">BLESS (kèo mới):</span>
+                                        <a target="_blank" href="https://bless.network/dashboard?ref=WAKGZ6"
                                                 style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
                                                 href="https://chromewebstore.google.com/detail/bless/pljbjcehnhcnofmkdbjolghdcjnmekia"
                                                 style="color: rgb(180, 78, 71);"> Extention </a>
 
                                 </h4>
-                                <h4><span class="rainbow-text">PIPE GUARDIAN (kèo mới):</span> <a target="_blank"
+                                <h4><span class="star">&#9733;</span><span class="rainbow-text">PIPE GUARDIAN (kèo
+                                                mới):</span> <a target="_blank"
                                                 href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
                                                 style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
                                                 href="https://chromewebstore.google.com/detail/pipe-guardian-node/gelgmmdfajpefjbiaedgjkpekijhkgbe"
@@ -94,7 +103,8 @@
                                 <p>Ghi chú: </p>
                                 <h5>- Phần "Tại đây" là liên kết tạo tài khoản</h5>
                                 <h5>- Phần "Extention" là liên kết tải extention</h5>
-                                <h5>- Với những liên kết có phần CODE thì khi tạo tài khoản hãy nhập code vào phần mã
+                                <h5>- Với những liên kết có phần CODE thì khi tạo tài khoản hãy nhập code vào
+                                        phần mã
                                         mời để nhận thêm point</h5>
                         </header>
                         <div class="col-1"></div>
