--- a/index.html
+++ b/index.html
@@ -23,7 +23,36 @@
             <div class="content">
                -----------------------
             </div>
+            <h4><span class="star">&#9733;</span><span class="rainbow-text">KAISAR (kèo mới):</span>
+               <a target="_blank" href="https://zero.kaisar.io/register?ref=fbRZnN747"
+                  style="color: rgb(180, 78, 71);">Tại
+                  đây </a><a target="_blank"
+                  href="https://chromewebstore.google.com/detail/kaisar-zeronode/mmlnljdcfjnfeikeioghbkobdcmnhgko"
+                  style="color: rgb(180, 78, 71);"> Extention </a>
 
+            </h4>
+            <h4><span class="star">&#9733;</span><span class="rainbow-text">BLESS (kèo mới):</span>
+               <a target="_blank" href="https://bless.network/dashboard?ref=WAKGZ6" style="color: rgb(180, 78, 71);">Tại
+                  đây
+               </a><a target="_blank"
+                  href="https://chromewebstore.google.com/detail/bless/pljbjcehnhcnofmkdbjolghdcjnmekia"
+                  style="color: rgb(180, 78, 71);"> Extention </a>
+
+            </h4>
+            <h4><span class="star">&#9733;</span><span class="rainbow-text">PIPE GUARDIAN (kèo
+                  mới):</span> <a target="_blank" href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
+                  style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
+                  href="https://chromewebstore.google.com/detail/pipe-guardian-node/gelgmmdfajpefjbiaedgjkpekijhkgbe"
+                  style="color: rgb(180, 78, 71);"> Extention </a>
+
+            </h4>
+            <h4><span class="star">&#9733;</span><span class="rainbow-text">OPENLOOP (kèo
+                  mới):</span> <a target="_blank"
+                  href="https://chromewebstore.google.com/detail/openloopso-sentry-node-ex/effapmdildnpkiaeghlkicpfflpiambm"
+                  style="color: rgb(180, 78, 71);"> Extention </a><i>CODE:
+                  ol1ae340af</i>
+
+            </h4>
             <h4><span class="star">&#9733;</span><span class="rainbow-text">GRASS:</span> <a target="_blank"
                   href="https://app.getgrass.io/register/?referralCode=KQqRz1rnDMxozW6"
                   style="color: rgb(180, 78, 71);">Tại
@@ -66,31 +95,8 @@
                   href="https://explorer.uplink.xyz/register?referralCode=zFDvW1"
                   style="color: rgb(180, 78, 71);">Extention
                </a>
-
             </h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">KAISAR (kèo mới):</span>
-               <a target="_blank" href="https://zero.kaisar.io/register?ref=fbRZnN747"
-                  style="color: rgb(180, 78, 71);">Tại
-                  đây </a><a target="_blank"
-                  href="https://chromewebstore.google.com/detail/kaisar-zeronode/mmlnljdcfjnfeikeioghbkobdcmnhgko"
-                  style="color: rgb(180, 78, 71);"> Extention </a>
 
-            </h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">BLESS (kèo mới):</span>
-               <a target="_blank" href="https://bless.network/dashboard?ref=WAKGZ6" style="color: rgb(180, 78, 71);">Tại
-                  đây
-               </a><a target="_blank"
-                  href="https://chromewebstore.google.com/detail/bless/pljbjcehnhcnofmkdbjolghdcjnmekia"
-                  style="color: rgb(180, 78, 71);"> Extention </a>
-
-            </h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">PIPE GUARDIAN (kèo
-                  mới):</span> <a target="_blank" href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
-                  style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
-                  href="https://chromewebstore.google.com/detail/pipe-guardian-node/gelgmmdfajpefjbiaedgjkpekijhkgbe"
-                  style="color: rgb(180, 78, 71);"> Extention </a>
-
-            </h4>
             <div class="content">
                -----------------------
             </div>
