--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <tr>
                      <th>Tên dự án</th>
                      <th>Phương thức tham gia</th>
-                     <th>Giá đã list</th>
+                     <th>Giá</th>
                   </tr>
                </thead>
                <tbody>
