--- a/game_tele.html
+++ b/game_tele.html
@@ -50,6 +50,12 @@
                                     style="color: rgb(180, 78, 71);"> Tại đây </a></td>
                             <td style="color: #539100;">SẮP RA MẮT</td>
                         </tr>
+                        <tr>
+                            <td><span class="star">&#9733;</span><span class="rainbow-text">SIGMA (kèo mới) </span></td>
+                            <td><a target="_blank" href="https://t.me/sigmatonbot/app?startapp=ref_2ellnn3"
+                                    style="color: rgb(180, 78, 71);"> Tại đây </a></td>
+                            <td style="color: #539100;">NULL</td>
+                        </tr>
                     </tbody>
                 </table>
 
