--- a/game_tele.html
+++ b/game_tele.html
@@ -38,6 +38,12 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td><span class="star">&#9733;</span><span class="rainbow-text">SIGMA (kèo mới) </span></td>
+                            <td><a target="_blank" href="https://t.me/sigmatonbot/app?startapp=ref_2ellnn3"
+                                    style="color: rgb(180, 78, 71);"> Tại đây </a></td>
+                            <td>NULL</td>
+                        </tr>
+                        <tr>
                             <td><span class="star">&#9733;</span><span class="rainbow-text">TELEMON (kèo
                                     mới)</span></td>
                             <td><a target="_blank" href="https://t.me/telemonapp_bot/app?startapp=HTU2X"
@@ -50,12 +56,7 @@
                                     style="color: rgb(180, 78, 71);"> Tại đây </a></td>
                             <td style="color: #539100;">SẮP RA MẮT</td>
                         </tr>
-                        <tr>
-                            <td><span class="star">&#9733;</span><span class="rainbow-text">SIGMA (kèo mới) </span></td>
-                            <td><a target="_blank" href="https://t.me/sigmatonbot/app?startapp=ref_2ellnn3"
-                                    style="color: rgb(180, 78, 71);"> Tại đây </a></td>
-                            <td style="color: #539100;">NULL</td>
-                        </tr>
+
                     </tbody>
                 </table>
 
