--- a/index.html
+++ b/index.html
@@ -38,8 +38,21 @@
                </thead>
                <tbody>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">OPENLOOP (kèo
-                           mới)</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">DEPINED (kèo mới)</span></td>
+                     <td><a target="_blank" href="https://app.depined.org/onboarding" style="color: rgb(180, 78, 71);">
+                           Tại đây </a><i>CODE:
+                           EL4Gugod3JlC</i></td>
+                     <td>NULL</td>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">HUMANITY (kèo mới)</span></td>
+                     <td><a target="_blank" href="testnet.humanity.org/login?ref=thienper"
+                           style="color: rgb(180, 78, 71);"> Tại đây </a><i>CODE:
+                           thienper</i></td>
+                     <td>NULL</td>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">OPENLOOP</span></td>
                      <td><a target="_blank"
                            href="https://chromewebstore.google.com/detail/openloopso-sentry-node-ex/effapmdildnpkiaeghlkicpfflpiambm"
                            style="color: rgb(180, 78, 71);"> Extention </a><i>CODE:
@@ -47,7 +60,7 @@
                      <td>NULL</td>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">KAISAR (kèo mới)</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">KAISAR</span></td>
                      <td><a target="_blank" href="https://zero.kaisar.io/register?ref=fbRZnN747"
                            style="color: rgb(180, 78, 71);">Tại
                            đây </a><a target="_blank"
@@ -56,7 +69,7 @@
                      <td>NULL</td>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">BLESS (kèo mới)</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">BLESS</span></td>
                      <td> <a target="_blank" href="https://bless.network/dashboard?ref=WAKGZ6"
                            style="color: rgb(180, 78, 71);">Tại
                            đây
@@ -66,8 +79,7 @@
                      <td>NULL</td>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">PIPE GUARDIAN (kèo
-                           mới)</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">PIPE GUARDIAN</span></td>
                      <td><a target="_blank" href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
                            style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
                            href="https://chromewebstore.google.com/detail/pipe-guardian-node/gelgmmdfajpefjbiaedgjkpekijhkgbe"
@@ -79,7 +91,7 @@
                      <td><a target="_blank" href="https://app.getgrass.io/register/?referralCode=KQqRz1rnDMxozW6"
                            style="color: rgb(180, 78, 71);">Tại
                            đây</a></td>
-                     <td><span id="grass-price">Loading...</span><span>(2$ - 3,8$)</span></p>
+                     <td style="color: #539100;"><span id="grass-price">Loading...</span><span>(2$ - 3,8$)</span></p>
                      </td>
                   </tr>
                   <tr>
@@ -98,7 +110,8 @@
                            đây</a><a target="_blank"
                            href="https://chromewebstore.google.com/detail/nodepay-extension/lgmpfmgeabnnlemejacfljbmonaomfmm"
                            style="color: rgb(180, 78, 71);"> Extention </a></td>
-                     <td style="color: #539100;">SẮP RA MẮT</td>
+                     <td style="color: #539100;"><span id="nodepay-price">Loading...</span><span>(0.13$ - 0.3$)</span>
+                     </td>
                   </tr>
                   </tr>
                   <tr>
