--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                </thead>
                <tbody>
                   <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">LAYEREDGE (kèo mới)</span></td>
+                     <td><a target="_blank" href="https://dashboard.layeredge.io/" style="color: rgb(180, 78, 71);">
+                           Tại đây </a><i>CODE:
+                           WOFsUZxU</i></td>
+                     <td>NULL</td>
+                  </tr>
+                  <tr>
                      <td><span class="star">&#9733;</span><span class="rainbow-text">DEPINED (kèo mới)</span></td>
                      <td><a target="_blank" href="https://app.depined.org/onboarding" style="color: rgb(180, 78, 71);">
                            Tại đây </a><i>CODE:
