--- a/index.html
+++ b/index.html
@@ -33,15 +33,25 @@
                   <tr>
                      <th>Tên dự án</th>
                      <th>Phương thức tham gia</th>
+                     <th>Mùa</th>
                      <th>Giá</th>
                   </tr>
                </thead>
                <tbody>
                   <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">SOSOVALUE (kèo mới)</span></td>
+                     <td><a target="_blank" href="https://sosovalue.com/join/3Y09FL84" style="color: rgb(180, 78, 71);">
+                           Tại đây </a><i>CODE:
+                           3Y09FL84</i></td>
+                     <td>Season #2</td>
+                     <td style="color: #539100;"><span id="soso-price">Loading...</span><span>(0,7$ - 1,2$)</span></p>
+                  </tr>
+                  <tr>
                      <td><span class="star">&#9733;</span><span class="rainbow-text">LAYEREDGE (kèo mới)</span></td>
                      <td><a target="_blank" href="https://dashboard.layeredge.io/" style="color: rgb(180, 78, 71);">
                            Tại đây </a><i>CODE:
                            WOFsUZxU</i></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   <tr>
@@ -49,6 +59,7 @@
                      <td><a target="_blank" href="https://app.depined.org/onboarding" style="color: rgb(180, 78, 71);">
                            Tại đây </a><i>CODE:
                            EL4Gugod3JlC</i></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   <tr>
@@ -56,6 +67,7 @@
                      <td><a target="_blank" href="testnet.humanity.org/login?ref=thienper"
                            style="color: rgb(180, 78, 71);"> Tại đây </a><i>CODE:
                            thienper</i></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   <tr>
@@ -64,6 +76,7 @@
                            href="https://chromewebstore.google.com/detail/openloopso-sentry-node-ex/effapmdildnpkiaeghlkicpfflpiambm"
                            style="color: rgb(180, 78, 71);"> Extention </a><i>CODE:
                            ol1ae340af</i></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   <tr>
@@ -73,6 +86,7 @@
                            đây </a><a target="_blank"
                            href="https://chromewebstore.google.com/detail/kaisar-zeronode/mmlnljdcfjnfeikeioghbkobdcmnhgko"
                            style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   <tr>
@@ -83,6 +97,7 @@
                         </a><a target="_blank"
                            href="https://chromewebstore.google.com/detail/bless/pljbjcehnhcnofmkdbjolghdcjnmekia"
                            style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   <tr>
@@ -91,6 +106,7 @@
                            style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
                            href="https://chromewebstore.google.com/detail/pipe-guardian-node/gelgmmdfajpefjbiaedgjkpekijhkgbe"
                            style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   <tr>
@@ -98,7 +114,9 @@
                      <td><a target="_blank" href="https://app.getgrass.io/register/?referralCode=KQqRz1rnDMxozW6"
                            style="color: rgb(180, 78, 71);">Tại
                            đây</a></td>
+                     <td>Season #2 , Epoch 4</td>
                      <td style="color: #539100;"><span id="grass-price">Loading...</span><span>(2$ - 3,8$)</span></p>
+
                      </td>
                   </tr>
                   <tr>
@@ -108,6 +126,7 @@
                            đây</a> <a target="_blank"
                            href="https://chromewebstore.google.com/detail/gradient-sentry-node/caacbgbklghmpodbdafajbgdnegacfmo"
                            style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   <tr>
@@ -117,6 +136,7 @@
                            đây</a><a target="_blank"
                            href="https://chromewebstore.google.com/detail/nodepay-extension/lgmpfmgeabnnlemejacfljbmonaomfmm"
                            style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>Season #3</td>
                      <td style="color: #539100;"><span id="nodepay-price">Loading...</span><span>(0.13$ - 0.3$)</span>
                      </td>
                   </tr>
@@ -128,6 +148,7 @@
                            đây</a><a target="_blank"
                            href="https://chromewebstore.google.com/detail/oasisai/knhbjeinoabfecakfppapfgdhcpnekmm?hl=en"
                            style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   </tr>
@@ -139,6 +160,7 @@
                            đây</a><a target="_blank"
                            href="https://chromewebstore.google.com/detail/blockmesh-network/obfhoiefijlolgdmphcekifedagnkfjp"
                            style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   </tr>
@@ -150,6 +172,7 @@
                            href="https://chromewebstore.google.com/detail/teneo-community-node/emcclcoaglgcpoognfiggmhnhgabppkm?hl=de&authuser=0"
                            style="color: rgb(180, 78, 71);"> Extention </a> <i>CODE:
                            CH2GW</i></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   </tr>
@@ -159,6 +182,7 @@
                            href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp"
                            style="color: rgb(180, 78, 71);">Extention </a> <i>CODE:
                            0dri9idh</i></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                   <tr>
@@ -166,6 +190,7 @@
                      <td><a target="_blank" href="https://explorer.uplink.xyz/register?referralCode=zFDvW1"
                            style="color: rgb(180, 78, 71);">Extention
                         </a></td>
+                     <td>Season #0</td>
                      <td>NULL</td>
                   </tr>
                </tbody>
